[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/Menu/Join/tickets/ticketoverlay.png" type="Texture" id=1]
[ext_resource path="res://assets/Menu/Join/tickets/barcode-Sheet-Sheet.png" type="Texture" id=2]
[ext_resource path="res://fonts/smallBlix.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Menu/Join/tickets/ticket dark.png" type="Texture" id=4]
[ext_resource path="res://assets/Menu/Join/tickets/ticket light.png" type="Texture" id=5]
[ext_resource path="res://Ticket.gd" type="Script" id=6]
[ext_resource path="res://assets/Menu/Join/tickets/edge.png" type="Texture" id=7]
[ext_resource path="res://assets/Menu/Join/tickets/buttonTable.png" type="Texture" id=8]
[ext_resource path="res://assets/Menu/Join/tickets/barBTN.png" type="Texture" id=9]
[ext_resource path="res://assets/Menu/Join/tickets/barBTNredZone.png" type="Texture" id=10]
[ext_resource path="res://assets/Menu/Join/tickets/clickZone.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 26 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 26, 96, 26 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 52, 96, 26 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 78, 96, 26 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 104, 96, 26 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 130, 96, 26 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 156, 96, 26 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 182, 96, 26 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 208, 96, 26 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 234, 96, 26 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 0, 260, 96, 26 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 0, 286, 96, 26 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 0, 312, 96, 26 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 0, 338, 96, 26 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=17]
size = 10
extra_spacing_top = -4
extra_spacing_bottom = -4
extra_spacing_space = -1
font_data = ExtResource( 3 )

[node name="Ticket" type="Node2D"]
position = Vector2( 49, 13 )
script = ExtResource( 6 )

[node name="2Dnode" type="Node2D" parent="."]

[node name="TicketPaper" type="AnimatedSprite" parent="2Dnode"]
frames = SubResource( 1 )

[node name="Basics" type="Sprite" parent="2Dnode"]
texture = ExtResource( 1 )

[node name="barcode" type="AnimatedSprite" parent="2Dnode"]
position = Vector2( 0, 0.0406952 )
frames = SubResource( 16 )

[node name="lines" type="Sprite" parent="2Dnode"]
texture = ExtResource( 7 )

[node name="Name" type="Label" parent="."]
margin_left = -28.0
margin_top = -11.0
margin_right = 46.0
margin_bottom = -6.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "name "
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP" type="Label" parent="."]
margin_left = -28.0
margin_top = -5.0
margin_right = 45.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ip"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="state" type="Label" parent="."]
margin_left = -28.0
margin_top = 1.0
margin_right = 28.0
margin_bottom = 6.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "state"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playNum" type="Label" parent="."]
margin_left = 26.0
margin_top = 1.0
margin_right = 34.0
margin_bottom = 6.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "00"
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="maxNum" type="Label" parent="."]
margin_left = 39.0
margin_top = 1.0
margin_right = 47.0
margin_bottom = 6.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "99"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left & Right" type="TextureButton" parent="."]
margin_left = -49.0
margin_top = -13.0
margin_right = 49.0
margin_bottom = 13.0
action_mode = 0
button_mask = 3
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="off" type="Timer" parent="."]

[node name="click" type="Node2D" parent="."]

[node name="pop" type="Sprite" parent="click"]
position = Vector2( 3.8147e-06, 9.53674e-07 )
texture = ExtResource( 8 )

[node name="exit button" type="TextureButton" parent="click"]
margin_left = -2000.0
margin_top = -2000.0
margin_right = 2000.0
margin_bottom = 2000.0
button_mask = 7
texture_normal = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join" type="TextureButton" parent="click"]
margin_left = -45.0
margin_top = -4.84805
margin_right = -23.0
margin_bottom = 4.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="Left & Right" to="." method="Click"]
[connection signal="gui_input" from="click/exit button" to="." method="ClickExit"]
[connection signal="pressed" from="click/exit button" to="." method="ClickExit"]
[connection signal="pressed" from="click/join" to="." method="join"]
